--- a/google.ai/package.json
+++ b/google.ai/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "声影共鸣---音乐视觉化海报",
+  "name": "ai-creative-workshop",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-dom": "^19.2.3",
-    "lucide-react": "0.460.0"
+    "react-dom": "19.0.0",
+    "@google/genai": "^1.34.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "vite": "^6.0.0"
   }
 }
