--- a/google.ai/package.json
+++ b/google.ai/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "@google/genai": "^1.34.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@google/genai": "^1.34.0",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "typescript": "^5.0.0",
     "vite": "^6.0.0"
   }
 }
